--- a/styles/style.css
+++ b/styles/style.css
@@ -143,7 +143,7 @@ body {
   text-transform: uppercase;
   color: #fff;
   padding: 12px 31px 11px 30px;
-  border: 1px solid;
+  border: 1px solid currentColor;
 }
 
 .lots {
